compiler/rust/runtime/tests/snapshots/manifest_validation__manifest_missing_project_version.snap
---
source: tests/manifest_validation.rs
expression: snapshot_diag(diag)
---
audit:
  config.key_path:
    - project
    - version
  config.path: /virtual/workspace/reml.toml
  config.source: manifest
code: config.missing_field
domain: config
extensions:
  config:
    key_path:
      - project
      - version
    path: /virtual/workspace/reml.toml
    source: manifest
message: "必須フィールド `project.version` が未設定です"
severity: error
