compiler/rust/runtime/tests/snapshots/manifest_validation__manifest_stage_bounds_invalid.snap
---
source: tests/manifest_validation.rs
expression: snapshot_diag(err)
---
audit:
  config.key_path:
    - dsl
    - demo
    - stage_bounds
    - minimum
  config.path: /virtual/workspace/reml.toml
  config.source: manifest
code: config.invalid_stage
domain: config
extensions:
  config:
    key_path:
      - dsl
      - demo
      - stage_bounds
      - minimum
    path: /virtual/workspace/reml.toml
    source: manifest
message: "`dsl.demo.stage_bounds.minimum` に未対応の Stage `legacy` が指定されました"
severity: error
