compiler/rust/runtime/tests/snapshots/manifest_validation__manifest_unknown_build_optimize.snap
---
source: tests/manifest_validation.rs
expression: snapshot_diag(diag)
---
audit:
  config.key_path:
    - build
    - optimize
  config.path: /virtual/workspace/reml.toml
  config.source: manifest
code: config.build.optimize_unknown
domain: config
extensions:
  config:
    key_path:
      - build
      - optimize
    path: /virtual/workspace/reml.toml
    source: manifest
message: "`build.optimize` に未対応の optimize 値 `turbo` が指定されました"
severity: error
