compiler/rust/runtime/tests/snapshots/manifest_validation__manifest_unknown_profile_optimize.snap
---
source: tests/manifest_validation.rs
expression: snapshot_diag(diag)
---
audit:
  config.key_path:
    - build
    - profiles
    - custom
    - optimize
  config.path: /virtual/workspace/reml.toml
  config.source: manifest
code: config.build.optimize_unknown
domain: config
extensions:
  config:
    key_path:
      - build
      - profiles
      - custom
      - optimize
    path: /virtual/workspace/reml.toml
    source: manifest
message: "`build.profiles.custom.optimize` に未対応の optimize 値 `hyper` が指定されました"
severity: error
