compiler/rust/runtime/tests/snapshots/manifest_validation__manifest_unknown_project_stage.snap
---
source: tests/manifest_validation.rs
expression: snapshot_diag(diag)
---
audit:
  config.key_path:
    - project
    - stage
  config.path: /virtual/workspace/reml.toml
  config.source: manifest
code: config.invalid_stage
domain: config
extensions:
  config:
    key_path:
      - project
      - stage
    path: /virtual/workspace/reml.toml
    source: manifest
message: "`project.stage` に未対応の Stage `next` が指定されました"
severity: error
